--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="contenedor contenido-header">
+            <h1>Tech & EDM  Festival</h1>
+            <nav class="navegacion-principal">
+                <a href="">Lineup</a>
+                <a href="">Galería</a>
+                <a href="">Boletos</a>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
