--- a/index.html
+++ b/index.html
@@ -21,5 +21,17 @@
             </nav>
         </div>
     </header>
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2>Techno & EDM Festival</h2>
+                <p>Septiembre 2024,MV,Uruguay.</p>
+            </div>
+        </div>
+        <video autoplay muted loop>
+            <source src="video/dj.mp4"  type="video/mp4"/>
+            <source src="video/dj.webm"  type="video/webm"/>
+        </video>
+    </div>
 </body>
 </html>
