seccion festival lista

--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@
             <source src="video/dj.webm"  type="video/webm"/>
         </video>
     </div>
+    <section class="sobre-festival">
+        <div class="imagen">
+            <img src="src/img/imagen_dj.jpg" alt="festival">
+        </div>
+        <div class="contenido-festival">
+            <h2>Techno & EDM Festival</h2>
+            <p class="fecha">Septiembre 2024,MV,Uruguay</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate quisquam ipsam nostrum fugiat. 
+                Tempore voluptates qui praesentium quia enim quo cumque dolorum velit unde animi adipisci sed, officiis rem hic.</p>
+        </div>
+    </section>
 </body>
 </html>
